--- a/css/index.css
+++ b/css/index.css
@@ -9,3 +9,39 @@ p, li {
 #coming-soon {
   width: 75%;
 }
+
+html {
+  background-color: #dddddd
+}
+
+thead {
+  font-weight: bold;
+}
+table .date {
+  max-width: 90px;
+}
+table .title {
+  max-width: 250px;
+}
+
+table .summary {
+  max-width: 400px;
+}
+
+td {
+  border: 2px solid #222222;
+}
+
+.blog-image {
+  border: 4px solid #999999;
+  margin: 10px;
+}
+
+.blog-image img {
+  border-bottom: 2px solid #999999;
+}
+
+.blog-image p#subtext {
+  margin: 5px;
+  font-size: 12px;
+}
