--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -44,8 +44,8 @@
 /* For devices larger than 400px */
 @media (min-width: 400px) {
   .container {
-    width: 85%;
-    padding: 0; }
+    max-width: 960px;
+    padding: 20px 0; }
 }
 
 /* For devices larger than 550px */
@@ -327,12 +327,12 @@ td {
   padding: 12px 15px;
   text-align: left;
   border-bottom: 1px solid #E1E1E1; }
-th:first-child,
+/*th:first-child,
 td:first-child {
   padding-left: 0; }
 th:last-child,
 td:last-child {
-  padding-right: 0; }
+  padding-right: 0; }*/
 
 
 /* Spacing
