--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -34,7 +34,9 @@
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  padding-bottom: 5em;
+ }
 .column,
 .columns {
   width: 100%;
@@ -45,13 +47,17 @@
 @media (min-width: 400px) {
   .container {
     max-width: 960px;
-    padding: 20px 0; }
+    padding: 20px 0;
+    padding-bottom: 4em;
+  }
 }
 
 /* For devices larger than 550px */
 @media (min-width: 550px) {
   .container {
-    width: 80%; }
+    width: 80%;
+    padding-bottom: 4em;
+  }
   .column,
   .columns {
     margin-left: 4%; }
