--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,19 @@
 h3, h4, h5 {
   font-family: cursive;
 }
+
+a {
+  color: black;
+}
+
+sup {
+  font-weight: bold;
+}
+
+a.footerlink {
+  text-decoration: none;
+}
+
 #header, #footer {
   background-color: #cccccc;
 }
@@ -65,6 +78,14 @@ td {
 .blog-image p#subtext {
   margin: 5px;
   font-size: 12px;
+}
+
+ul.footnotes {
+  list-style-type: none;
+}
+
+p.date {
+  font-family: monospace;
 }
 
 ./*space-for-footer {
