--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -163,10 +163,10 @@ p {
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-a {
+/*a {
   color: #1EAEDB; }
 a:hover {
-  color: #0FA0CE; }
+  color: #0FA0CE; }*/
 
 
 /* Buttons
