--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-h3, h4, h5 {
+h1, h2, h3, h4 {
   font-family: cursive;
 }
 
@@ -24,7 +24,7 @@ a.footerlink {
   bottom: 0px;
 }
 
-#header h3, #footer div {
+#header h1, #footer div {
   margin: 0 auto;
   max-width: 960px;
   width: 80%;
@@ -69,10 +69,12 @@ td {
 .blog-image {
   border: 4px solid #999999;
   margin: 10px;
+  background-color: #e8e8e8;
 }
 
 .blog-image img {
   border-bottom: 2px solid #999999;
+  background-color: white;
 }
 
 .blog-image p#subtext {
@@ -86,6 +88,11 @@ ul.footnotes {
 
 p.date {
   font-family: monospace;
+}
+
+#macmed {
+  padding-top: .5em;
+  padding-bottom: .5em;
 }
 
 ./*space-for-footer {
