--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@ h1, h2, h3, h4 {
   font-family: cursive;
 }
 
+h5, h6 {
+  font-weight: bold;
+}
+
 h1 a {
   text-decoration: none;
 }
@@ -59,15 +63,51 @@ html {
 thead {
   font-weight: bold;
 }
-table .date {
-  max-width: 90px;
-}
-table .title {
-  max-width: 250px;
+
+td, th {
+  text-align: center;
 }
 
-table .summary {
+table#of-contents td, table#of-contents th{
+  text-align: left;
+}
+
+@media (max-width: 700px) {
+  table, thead, tbody, th, td, tr {
+    display: block;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
+  td:nth-child(3n +1) {
+    border-top: 4px solid black;
+    background-color: #bbbbbb
+  }
+
+}
+@media (min-width: 700px) {
+  td .date {
+    max-width: 90px;
+  }
+  table .title {
+    max-width: 300px;
+    min-width: 200px;
+  }
+  table#results img {
+    max-width: 100%;
+  }
+  table#results td {
+    max-width: 30%;
+  }
+}
+
+/*table .summary {
   max-width: 400px;
+}*/
+table {
+  margin: 0px auto;
+  margin-top: 1em;
+  margin-bottom: 1em;
 }
 
 td {
