--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
-h1, h2, h3, h4 {
-  font-family: cursive;
+#header, h1, h2, h3, h4 {
+  font-family: 'Arima Madurai', cursive;
 }
 
 h5, h6 {
@@ -24,6 +24,29 @@ sup a {
 
 ol {
   margin-left: 4.33333333333%;
+}
+
+nav {
+  background-color: white;
+  border-top: 4px solid black;
+  border-bottom: 2px solid #333333;
+}
+
+nav ul {
+  width: 80%;
+  max-width: 960px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  list-style-type: none;
+  padding: .5em;
+  margin: 0px auto;
+}
+
+nav li {
+  font-size: 1.2em;
+  width: 20%;
 }
 
 #header, #footer {
