--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,14 @@ nav li {
   padding-bottom: .5em;
 }
 
+#header {
+  font-size: 3em;
+}
+
+#header a {
+  text-decoration: none;
+}
+
 #footer p {
   margin-bottom: .5em;
 }
@@ -80,7 +88,7 @@ p, li {
 }
 
 html {
-  background-color: #dddddd
+  background-color: #e5e5e5;
 }
 
 thead {
@@ -96,13 +104,17 @@ table#of-contents td, table#of-contents th{
 }
 
 @media (max-width: 700px) {
-  table, thead, tbody, th, td, tr {
+  table, tbody, td, tr {
     display: block;
     margin-left: 0px;
     margin-right: 0px;
   }
 
-  td:nth-child(3n +1) {
+  th, thead {
+    display: none;
+  }
+
+  .homepage td:nth-child(3n +1) {
     border-top: 4px solid black;
     background-color: #bbbbbb
   }
