--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,12 @@ nav ul {
 
 nav li {
   font-size: 1.2em;
-  width: 20%;
+  padding-right: 2em;
+  margin-bottom: 0px;
+}
+
+nav a {
+  text-decoration: none;
 }
 
 #header, #footer {
@@ -59,7 +64,7 @@ nav li {
   bottom: 0px;
 }
 
-#header h1, #footer div {
+#header div, #footer div {
   margin: 0 auto;
   max-width: 960px;
   width: 80%;
@@ -68,7 +73,7 @@ nav li {
 }
 
 #header {
-  font-size: 3em;
+  font-size: 4em;
 }
 
 #header a {
@@ -103,11 +108,42 @@ table#of-contents td, table#of-contents th{
   text-align: left;
 }
 
-@media (max-width: 700px) {
+
+.book-header {
+  background-color: #888888;
+  border-radius: 5px;
+  border-bottom: 2px solid #333333;
+  border-top: 2px solid #333333;
+  padding:  0em .5em;
+}
+.book-header p {
+  font-weight: bold;
+  color: white;
+}
+
+.tablish .book {
+  background-color: #f8f8f8;
+  border-bottom: 2px solid #333333;
+  border-top: 2px solid #333333;
+  border-radius: 5px;
+  margin-top: .5em;
+  padding: .5em;
+}
+
+.tablish .title {
+  font-weight: bold;
+}
+
+@media (max-width: 800px) {
   table, tbody, td, tr {
     display: block;
     margin-left: 0px;
     margin-right: 0px;
+  }
+
+  p, li {
+    text-align:justify;
+    font-size: 1.5rem;
   }
 
   th, thead {
@@ -121,9 +157,33 @@ table#of-contents td, table#of-contents th{
   img {
     max-width: 100%;
   }
+  #header {
+    font-size: 2em;
+  }
+
+  .tablish .book-header {
+    display: none;
+  }
+
+  .tablish p {
+    text-align: center;
+  }
+
+  nav li {
+    font-size: 1em;
+  }
+  nav {
+    margin-bottom: .5em;
+  }
 
 }
 @media (min-width: 700px) {
+  .container {
+    margin-bottom: 1em;
+  }
+  #header {
+    font-size: 3em;
+  }
   td .date {
     max-width: 90px;
   }
@@ -136,6 +196,39 @@ table#of-contents td, table#of-contents th{
   }
   table#results td {
     max-width: 30%;
+  }
+
+
+  .book, .book-header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .book-header {
+    /*text-align: center;*/
+  }
+
+  .book p, .book-header p {
+    margin-bottom: 0;
+    padding: 1em;
+  }
+
+
+  .book .title, .book-header .title {
+    order: 1;
+    min-width: 150px;
+    max-width: 150px;
+    font-weight: bold;
+  }
+  .book .rating, .book-header .rating {
+    order: 2;
+    max-width: 90px;
+    min-width: 90px;
+  }
+  .book .recommendation, .book-header .recommendation {
+    order: 3;
+    width: 100%
   }
 }
 
@@ -155,7 +248,8 @@ td {
 .blog-image {
   border: 4px solid #999999;
   margin: 10px;
-  background-color: #e8e8e8;
+  background-color: #f8f8f8;
+  border-radius: 5px;
 }
 
 .blog-image img {
