--- a/css/index.css
+++ b/css/index.css
@@ -176,6 +176,13 @@ table#of-contents td, table#of-contents th{
   nav {
     margin-bottom: .5em;
   }
+  .signup-div {
+    width: 100%;
+    height: 100%;
+  }
+  .signupform {
+    width: 100%;
+  }
 
 }
 @media (min-width: 700px) {
@@ -199,6 +206,16 @@ table#of-contents td, table#of-contents th{
     max-width: 30%;
   }
 
+  .signup-div {
+    margin: 0px auto;
+    width: 560px;
+
+  }
+  .signupform {
+    margin: 0px auto;
+    width: 560px;
+    height: 540px;
+  }
 
   .book, .book-header {
     display: flex;
